--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/dokuzkey/server.git"
   },
-  "author": "9Key Developers",
+  "author": "9Key Team",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/dokuzkey/server/issues"
